# todo

./: .gitignore  todo.cabal
doc/: todo
ghci/: extensions.txt
src/: Event.hs  Main.hs  Parse.hs  Query.hs  Types.hs  Update.hs
src/Handler/: CurUser.hs  Entry.hs  LogIn.hs  Register.hs
src/Types/: Core.hs  Database.hs  Entry.hs  Instances.hs  JSON.hs  Request.hs  Response.hs  SafeCopy.hs  Session.hs  Tag.hs  User.hs
static/: pages.js  sword.css  sword.html  sword.js  todo.css  todo.html  todo.js
