
name: todo
version: 0.0.0.1
cabal-version: >= 1.10
build-type: Simple
license: GPL
license-file: LICENSE
copyright: (c) 2012 Karl Voelker
stability: unstable
homepage: https://github.com/ktvoelker/todo
maintainer: Karl Voelker <ktvoelker@gmail.com>
synopsis: A to-do list
description: TODO :D
category: Application
author: Karl Voelker <ktvoelker@gmail.com>

Executable todo
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    base >= 4 && < 5,
    containers >= 0.4 && < 0.5,
    -- mtl >= 2.1 && < 2.2,
    time >= 1.4 && < 1.5,
    safecopy >= 0.6 && < 0.7,
    acid-state >= 0.7 && < 0.8,
    warp >= 1.3 && < 1.4,
    wai >= 1.3 && < 1.4,
    wai-app-static >= 1.3 && < 1.4,
    state-record >= 0.1.0.1 && < 0.2,
    vorple >= 0.1.0.1 && < 0.2,
    parsec >= 3.1 && < 3.2,
    transformers >= 0.3 && < 0.4
  default-extensions:
    DeriveDataTypeable
    FlexibleContexts
    OverloadedStrings
    RecordWildCards
    StandaloneDeriving
    TemplateHaskell
    TypeFamilies

